# ChangeLog for net-misc/dhcp
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.35 2004/03/08 23:02:24 darkspecter Exp $

  09 Mar 2004; Bartosch Pixa <darkspecter@gentoo.org> dhcp-3.0_p2-r2.ebuild:
  set ppc in keywords

  04 Mar 2004; Gustavo Zacarias <gustavoz@gentoo.org> dhcp-3.0_p2-r3.ebuild:
  stable on sparc

  24 Feb 2004; Max Kalika <max@gentoo.org> dhcp-3.0_p2-r3.ebuild:
  Bump to stable x86.

  14 Jan 2004; Max Kalika <max@gentoo.org> dhcp-3.0_p2-r3.ebuild,
  files/dhcp.rc6, files/dhcrelay.rc6:
  Use proper pid file and directory. Fixes bug #35751.

  14 Jan 2004; Max Kalika <max@gentoo.org> dhcp-3.0_p2-r3.ebuild,
  files/dhcp.conf, files/dhcp.rc6, files/dhcrelay.conf, files/dhcrelay.rc6:
  Add dhcrelay startup script. Contributed by Martin Jackson on bug #33895.

  14 Jan 2004; Max Kalika <max@gentoo.org> dhcp-3.0_p2-r3.ebuild:
  Readd the ebuild and chown patch to address bugs #27079 and #36869.

  05 Jan 2004; Jason Wever <weeve@gentoo.org> dhcp-3.0_p2-r2.ebuild:
  Marked stable on sparc.

  31 Dec 2003; Guy Martin <gmsoft@gentoo.org> dhcp-3.0_p2-r2.ebuild:
  Marked stable on hppa.

  18 Nov 2003; Max Kalika <max@gentoo.org> dhcp-3.0_p2-r2.ebuild:
  Some fixes from bug 31840.

  07 Nov 2003; Max Kalika <max@gentoo.org> dhcp-3.0_p2-r3.ebuild,
  files/dhcp-3.0pl2-fix-perms.patch:
  Remove experimental version. The current stable works correctly.
  Finally fixes bug 31840.

*dhcp-3.0_p2-r3 (05 Nov 2003)

  05 Nov 2003; Max Kalika <max@gentoo.org> dhcp-3.0_p2-r3.ebuild,
  files/dhcp-3.0pl2-fix-perms.patch:
  Experimental attempt to fix 31840.

  05 Nov 2003; Max Kalika <max@gentoo.org> dhcp-3.0_p2-r2.ebuild,
  files/dhcp.rc6:
  Use a PID file for startup/shutdown.

  24 Oct 2003; Max Kalika <max@gentoo.org> dhcp-3.0_p2-r2.ebuild:
  Fix ownership as part of pkg_postinst(). Fixes bug 31840.

  22 Oct 2003; Max Kalika <max@gentoo.org> dhcp-3.0_p2-r2.ebuild: