@@ -1,17 +1,17 @@
+MD5 29b07a55514bc637a4c9551e3831ab1f dhcp-3.0_p2-r4.ebuild 2764
+MD5 3496bc4f42e0fc24d9c4e5c29fa35f60 dhcp-3.0_p2-r6.ebuild 4050
+MD5 acd88204ca093a36f5342c90e063c5d5 dhcp-3.0_p2-r5.ebuild 3874
 MD5 403c6bb685696eec8558f62080cdc92c ChangeLog 5754
-MD5 2688d353bf0ff8abf3789129a4a2b2b2 dhcp-3.0_p2.ebuild 2744
 MD5 9384ae7ba3e9f56b8027ea92f607042d metadata.xml 215
-MD5 ec7337fbd11f64b3204ccd875c8c1c22 dhcp-3.0_p2-r2.ebuild 3848
-MD5 ef085351101ecc5dc733a45548e7777a dhcp-3.0_p2-r3.ebuild 4017
-MD5 063e8ff79e456cfa7d29604bd4ba11ac files/conf.dhcpd 388
+MD5 b2e221805d63d5ea9f403fb63d39b8cc files/dhcp.conf 641
 MD5 498a3eb0e9deaf705f17fff3834f5b90 files/dhclient.c-3.0-dw-cli-fix.patch 734
+MD5 35c670df0455b8758adc60b15bfc1ea8 files/dhcrelay.rc6 571
+MD5 063e8ff79e456cfa7d29604bd4ba11ac files/conf.dhcpd 388
+MD5 d6ae01f5dcc87b11d4d96a34e7cc52a3 files/digest-dhcp-3.0_p2-r4 63
+MD5 a941fa952582373e42b07b61bd66a168 files/digest-dhcp-3.0_p2-r5 129
+MD5 a941fa952582373e42b07b61bd66a168 files/digest-dhcp-3.0_p2-r6 129
+MD5 60a68862dcb861fb6ec9f789fdb94d64 files/dhcrelay.conf 512
 MD5 322dca2a8f001a76dd817a3f2f9fd34d files/dhcp.rc6 1107
 MD5 03ea1fadd836c88a60b890650ea5edb6 files/dhcp.rc7 774
-MD5 d6ae01f5dcc87b11d4d96a34e7cc52a3 files/digest-dhcp-3.0_p2 63
-MD5 b2e221805d63d5ea9f403fb63d39b8cc files/dhcp.conf 641
 MD5 28ebabb4ad513afb04314634ecd9db25 files/dhcp-3.0pl2-user-option-fix.patch 1519
-MD5 a941fa952582373e42b07b61bd66a168 files/digest-dhcp-3.0_p2-r2 129
 MD5 d909d81a4d4ea39ddfc9898d33488c73 files/dhcp-3.0pl2-fix-perms.patch 485
-MD5 60a68862dcb861fb6ec9f789fdb94d64 files/dhcrelay.conf 512
-MD5 35c670df0455b8758adc60b15bfc1ea8 files/dhcrelay.rc6 571
-MD5 a941fa952582373e42b07b61bd66a168 files/digest-dhcp-3.0_p2-r3 129
