@@ -1,25 +1,28 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/Attic/dhcp-3.0_p2-r3.ebuild,v 1.6 2004/03/04 15:52:40 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/Attic/dhcp-3.0_p2-r6.ebuild,v 1.1 2004/03/08 23:45:35 seemant Exp $
+
+IUSE="static"
 
 inherit eutils flag-o-matic
 
+MY_P=${P/_p/pl}
+S=${WORKDIR}/${MY_P}
 DESCRIPTION="ISC Dynamic Host Configuration Protocol."
 HOMEPAGE="http://www.isc.org/products/DHCP"
-SRC_URI="ftp://ftp.isc.org/isc/dhcp/${P/_p/pl}.tar.gz
+SRC_URI="ftp://ftp.isc.org/isc/dhcp/${MY_P}.tar.gz
 	http://www.episec.com/people/edelkind/patches/dhcp/dhcp-3.0+paranoia.patch"
 
-LICENSE="isc-dhcp"
 SLOT="0"
+LICENSE="isc-dhcp"
 KEYWORDS="x86 ~ppc ~ppc64 sparc ~mips hppa"
-IUSE="static"
 
 RDEPEND="virtual/glibc"
 
 DEPEND="${RDEPEND}
 	>=sys-apps/sed-4"
 
-S="${WORKDIR}/${P/_p/pl}"
+PROVIDE="virtual/dhcpc"
 
 src_unpack() {
 	unpack ${A} && cd "${S}"
