@@ -1,6 +1,17 @@
 # ChangeLog for net-misc/dhcp
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.35 2004/03/08 23:02:24 darkspecter Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.36 2004/03/08 23:45:35 seemant Exp $
+
+*dhcp-3.0_p2-r5 (08 Mar 2004)
+
+  08 Mar 2004; Seemant Kulleen <seemant@gentoo.org> dhcp-3.0_p2-r2.ebuild,
+  dhcp-3.0_p2-r3.ebuild, dhcp-3.0_p2-r4.ebuild, dhcp-3.0_p2-r5.ebuild,
+  dhcp-3.0_p2-r6.ebuild, dhcp-3.0_p2.ebuild:
+  Forced a version bump on these ebuilds. Basically -r0 is now -r4, -r2 is now
+  -r5 and -r3 is now -r6. The reason for the revision bump was to make this
+  package PROVIDE virtual/dhcp. Closes a long-standing bloat-reduction request
+  made on gentoo-dev mailing list by: William Hubbs <kc5eiv@kc5eiv.homeip.net>
+  at http://article.gmane.org/gmane.linux.gentoo.devel/11579
 
   09 Mar 2004; Bartosch Pixa <darkspecter@gentoo.org> dhcp-3.0_p2-r2.ebuild:
   set ppc in keywords
